# YTMusicTauri

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  global_shortcuts.rs  lib.rs  main.rs  tray.rs
