[package]
name = "app"
version = "0.1.0"
description = "YT music desktop application"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
objc = "0.2.7"
serde_json = "1.0"
objc-foundation = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["global-shortcut-all", "system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
