[package]
publish = false
name = "ytmusic"
version = "0.1.1"
description = "YT music desktop application"
authors = ["Amaury Tobias"]
license = "MIT"
repository = ""
default-run = "ytmusic"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["global-shortcut-all", "system-tray"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
