[package]
publish = false
name = "ytmusic"
version = "0.5.1"
description = "YT music desktop application"
authors = ["Amaury <amaury.tobiasqr@gmail.com>"]
license = "MIT"
repository = "https://github.com/amaury-tobias/YTMusicTauri"
default-run = "ytmusic"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["global-shortcut-all", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
